--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://rahul-deshwal.github.io/{Digital-Agents}",
+  "homepage": "http://rahul-deshwal.github.io/Digital-Agents",
   "name": "digitalagent",
   "version": "0.1.0",
   "private": true,
@@ -40,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
